--- a/web/index.html
+++ b/web/index.html
@@ -73,30 +73,30 @@
                 <a href="views/modification fibonacci.html"><p>Modification Fibonacci</p></a>
                 <a href="views/fibonacci.html"><p>Interesting row</p></a>
                 <a href="views/fibonacci.html">
-                    <p>Longest subsequence with difference one Virtual programming lab</p>
+                    <p>Longest subsequence with difference one</p>
                 </a>
                 <a href="views/fibonacci.html">
-                    <p>Ways to sum to N using array elements with repetition Virtual programming lab</p>
+                    <p>Ways to sum to N using array elements with repetition</p>
                 </a>
                 <a href="views/fibonacci.html">
-                    <p>Ways to write n as sum of two or more positive integers Virtual programming lab</p>
+                    <p>Ways to write n as sum of two or more positive integers</p>
                 </a>
             <hr>
             <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an existing budget from Mr. Owner</h3>
-            <a href="views/fibonacci.html"><p>Ways to cover in 3 steps Virtual programming lab</p></a>
-            <a href="views/fibonacci.html"><p>Paths without crossing Virtual programming lab</p></a>
-            <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort Virtual programming lab</p></a>
+            <a href="views/fibonacci.html"><p>Ways to cover in 3 steps</p></a>
+            <a href="views/fibonacci.html"><p>Paths without crossing</p></a>
+            <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
            <hr>
             <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many other places.
                 And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia. LRBSBRL</h3>
-            <a href="views/fibonacci.html"><p>The longest palindromic subsequence Virtual programming lab</p></a>
-            <a href="views/fibonacci.html"><p>Friend pairs Virtual programming lab</p></a>
-            <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort Virtual programming lab</p></a>
+            <a href="views/palindromicSubsequence.html"><p>The longest palindromic subsequence</p></a>
+            <a href="views/fibonacci.html"><p>Friend pairs</p></a>
+            <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
             <hr>
             <h3>How to use dynamic programming to make better reconstruction at our home</h3>
-            <a href="views/fibonacci.html"><p>Ways to tile the floor Virtual programming lab</p></a>
-            <a href="views/fibonacci.html"><p>Painting the fence Virtual programming lab</p></a>
-            <a href="views/fibonacci.html"><p>ptimized painting fence: use one variable instead of a table Virtual programming lab</p></a>
+            <a href="views/fibonacci.html"><p>Ways to tile the floor</p></a>
+            <a href="views/fibonacci.html"><p>Painting the fence</p></a>
+            <a href="views/fibonacci.html"><p>Optimized painting fence: use one variable instead of a table</p></a>
 
         </div>
         <div class="col-sm-2 sidenav">
