Added CoverIn3Steps task to index page.

--- a/web/index.html
+++ b/web/index.html
@@ -83,7 +83,7 @@
                 </a>
             <hr>
             <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an existing budget from Mr. Owner</h3>
-            <a href="views/fibonacci.html"><p>Ways to cover in 3 steps</p></a>
+            <a href="views/coverIn3Steps.html"><p>Ways to cover in 3 steps</p></a>
             <a href="views/fibonacci.html"><p>Paths without crossing</p></a>
             <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
            <hr>
