--- a/web/index.html
+++ b/web/index.html
@@ -68,19 +68,13 @@
         </div>
         <div class="col-sm-8 text-left">
 
-                <h3>Let's try to help our PO in his calculations</h3>
-                <a href="views/fibonacci.html"><p>Fibonacci</p></a>
-                <a href="views/modification fibonacci.html"><p>Modification Fibonacci</p></a>
-                <a href="views/fibonacci.html"><p>Interesting row</p></a>
-                <a href="views/fibonacci.html">
-                    <p>Longest subsequence with difference one</p>
-                </a>
-                <a href="views/fibonacci.html">
-                    <p>Ways to sum to N using array elements with repetition</p>
-                </a>
-                <a href="views/fibonacci.html">
-                    <p>Ways to write n as sum of two or more positive integers</p>
-                </a>
+            <h3>Let's try to help our PO in his calculations</h3>
+            <a href="views/fibonacci.html"><p>Fibonacci</p></a>
+            <a href="views/modification fibonacci.html"><p>Modification Fibonacci</p></a>
+            <a href="views/fibonacci.html"><p>Interesting row</p></a>
+            <a href="views/fibonacci.html"><p>Longest subsequence with difference one</p></a>
+            <a href="views/fibonacci.html"><p>Ways to sum to N using array elements with repetition</p></a>
+            <a href="views/fibonacci.html"><p>Ways to write n as sum of two or more positive integers</p></a>
             <hr>
             <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an existing budget from Mr. Owner</h3>
             <a href="views/coverIn3Steps.html"><p>Ways to cover in 3 steps</p></a>
@@ -88,14 +82,14 @@
             <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
            <hr>
             <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many other places.
-                And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia. LRBSBRL</h3>
+                And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia.</h3>
             <a href="views/palindromicSubsequence.html"><p>The longest palindromic subsequence</p></a>
             <a href="views/fibonacci.html"><p>Friend pairs</p></a>
             <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
             <hr>
             <h3>How to use dynamic programming to make better reconstruction at our home</h3>
             <a href="views/fibonacci.html"><p>Ways to tile the floor</p></a>
-            <a href="views/fibonacci.html"><p>Painting the fence</p></a>
+            <a href="views/fence.html"><p>Painting the fence</p></a>
             <a href="views/fibonacci.html"><p>Optimized painting fence: use one variable instead of a table</p></a>
 
         </div>
