added link to waysAsSumOfPosInt.html in index page

--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
             <a href="views/fibonacci.html"><p>Interesting row</p></a>
             <a href="views/fibonacci.html"><p>Longest subsequence with difference one</p></a>
             <a href="views/fibonacci.html"><p>Ways to sum to N using array elements with repetition</p></a>
-            <a href="views/fibonacci.html"><p>Ways to write n as sum of two or more positive integers</p></a>
+            <a href="views/waysAsSumOfPosInt.html"><p>Ways to write n as sum of two or more positive integers</p></a>
             <hr>
             <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an existing budget from Mr. Owner</h3>
             <a href="views/coverIn3Steps.html"><p>Ways to cover in 3 steps</p></a>
