--- a/web/index.html
+++ b/web/index.html
@@ -80,7 +80,7 @@
             <a href="views/coverIn3Steps.html"><p>Ways to cover in 3 steps</p></a>
             <a href="views/fibonacci.html"><p>Paths without crossing</p></a>
             <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
-           <hr>
+            <hr>
             <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many other places.
                 And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia.</h3>
             <a href="views/palindromicSubsequence.html"><p>The longest palindromic subsequence</p></a>
@@ -90,7 +90,7 @@
             <h3>How to use dynamic programming to make better reconstruction at our home</h3>
             <a href="views/fibonacci.html"><p>Ways to tile the floor</p></a>
             <a href="views/fence.html"><p>Painting the fence</p></a>
-            <a href="views/fibonacci.html"><p>Optimized painting fence: use one variable instead of a table</p></a>
+            <a href="views/optimizedFence.html"><p>Optimized painting fence: use one variable instead of a table</p></a>
 
         </div>
         <div class="col-sm-2 sidenav">
@@ -100,7 +100,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-    <p>Footer Text</p>
+    <p>Team 1</p>
 </footer>
 
 </body>
