link to tileTheFloor.html in the index page added

--- a/web/index.html
+++ b/web/index.html
@@ -88,7 +88,7 @@
             <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
             <hr>
             <h3>How to use dynamic programming to make better reconstruction at our home</h3>
-            <a href="views/fibonacci.html"><p>Ways to tile the floor</p></a>
+            <a href="views/tileTheFloor.html"><p>Ways to tile the floor</p></a>
             <a href="views/fence.html"><p>Painting the fence</p></a>
             <a href="views/optimizedFence.html"><p>Optimized painting fence: use one variable instead of a table</p></a>
 
