"views for HighLowEfforts"

--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@
             <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an existing budget from Mr. Owner</h3>
             <a href="views/coverIn3Steps.html"><p>Ways to cover in 3 steps</p></a>
             <a href="views/fibonacci.html"><p>Paths without crossing</p></a>
-            <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
+            <a href="views/highLowEfforts.html"><p>Work to be with High-effort or with Low-effort</p></a>
             <hr>
             <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many other places.
                 And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia.</h3>
