Added new tasks html to index.html

--- a/web/index.html
+++ b/web/index.html
@@ -71,8 +71,8 @@
             <h3>Let's try to help our PO in his calculations</h3>
             <a href="views/fibonacci.html"><p>Fibonacci</p></a>
             <a href="views/modification fibonacci.html"><p>Modification Fibonacci</p></a>
-            <a href="views/fibonacci.html"><p>Interesting row</p></a>
-            <a href="views/fibonacci.html"><p>Longest subsequence with difference one</p></a>
+            <a href="views/interestingRows.html"><p>Interesting row</p></a>
+            <a href="views/longSubWithDiffOne.html"><p>Longest subsequence with difference one</p></a>
             <a href="views/fibonacci.html"><p>Ways to sum to N using array elements with repetition</p></a>
             <a href="views/waysAsSumOfPosInt.html"><p>Ways to write n as sum of two or more positive integers</p></a>
             <hr>
