view for FriendPairs added

--- a/web/index.html
+++ b/web/index.html
@@ -84,8 +84,7 @@
             <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many other places.
                 And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia.</h3>
             <a href="views/palindromicSubsequence.html"><p>The longest palindromic subsequence</p></a>
-            <a href="views/fibonacci.html"><p>Friend pairs</p></a>
-            <a href="views/fibonacci.html"><p>Work to be with High-effort or with Low-effort</p></a>
+            <a href="views/friendPairs.html"><p>Friend pairs</p></a>
             <hr>
             <h3>How to use dynamic programming to make better reconstruction at our home</h3>
             <a href="views/tileTheFloor.html"><p>Ways to tile the floor</p></a>
