--- a/web/index.html
+++ b/web/index.html
@@ -24,14 +24,14 @@
         /* Set gray background color and 100% height */
         .sidenav {
             padding-top: 20px;
-            background-color: #f1f1f1;
+
             height: 100%;
         }
 
         /* Set black background color, white text and some padding */
         footer, header {
-            background-color: #555;
-            color: white;
+
+            color: black;
             padding: 15px;
         }
 
@@ -51,6 +51,7 @@
     <div class="container-fluid"> -->
       <header  class="container-fluid text-center">
        <h1> Dynamic Programming</h1>
+          <hr>
       </header>
       <!--  <div class="navbar-header">
 
@@ -96,10 +97,12 @@
 
         </div>
     </div>
+
 </div>
 
 <footer class="container-fluid text-center">
-    <p>Team 1</p>
+    <hr>
+    <p>Team 1 Copyright</p>
 </footer>
 
 </body>
