--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,11 @@
             background-color: white;
             align-content: center;
         }
+
         /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-       .row.content {height: 900px}
+        .row.content {
+            height: 900px
+        }
 
         /* Set gray background color and 100% height */
         .sidenav {
@@ -41,7 +44,10 @@
                 height: auto;
                 padding: 15px;
             }
-            .row.content {height:auto;}
+
+            .row.content {
+                height: auto;
+            }
         }
     </style>
 </head>
@@ -49,16 +55,16 @@
 
 <!--<nav class="navbar navbar-inverse">
     <div class="container-fluid"> -->
-      <header  class="container-fluid text-center">
-       <h1> Dynamic Programming</h1>
-          <hr>
-      </header>
-      <!--  <div class="navbar-header">
+<header class="container-fluid text-center">
+    <h1> Dynamic Programming</h1>
+    <hr>
+</header>
+<!--  <div class="navbar-header">
 
-        </div>
+  </div>
 
 
-    </div>
+</div>
 
 </nav> -->
 <div class="container-fluid text-center">
@@ -74,16 +80,19 @@
             <a href="views/modification fibonacci.html"><p>Modification Fibonacci</p></a>
             <a href="views/interestingRows.html"><p>Interesting row</p></a>
             <a href="views/longSubWithDiffOne.html"><p>Longest subsequence with difference one</p></a>
-            <a href="views/fibonacci.html"><p>Ways to sum to N using array elements with repetition</p></a>
+            <a href="views/waysToSumArray.html"><p>Ways to sum to N using array elements with repetition</p></a>
             <a href="views/waysAsSumOfPosInt.html"><p>Ways to write n as sum of two or more positive integers</p></a>
             <hr>
-            <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an existing budget from Mr. Owner</h3>
+            <h3>"To sale is human" Daniel Pink- But let's sell clever and to help Mr. Salesman to sell more with an
+                existing budget from Mr. Owner</h3>
             <a href="views/coverIn3Steps.html"><p>Ways to cover in 3 steps</p></a>
             <a href="views/pathsWithoutCrossing.html"><p>Paths without crossing</p></a>
             <a href="views/highLowEfforts.html"><p>Work to be with High-effort or with Low-effort</p></a>
             <hr>
-            <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many other places.
-                And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin, Sofia.</h3>
+            <h3>"We will see how is possible to use palindrome to go to another city and we have to pass through many
+                other places.
+                And after that to go back, and to take the same route and to check it. Example: Lviv, Rome, Berlin,
+                Sofia.</h3>
             <a href="views/palindromicSubsequence.html"><p>The longest palindromic subsequence</p></a>
             <a href="views/friendPairs.html"><p>Friend pairs</p></a>
             <hr>
